[workspace]
members = ["code/*"]
resolver = "2"
[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["bmbp<rs_bmbp.163.com>"]
description="Bpmn Engine"
license="LICENSE"
readme = "README.md"
homepage="https://github.com/bmbper/bmbp_bpm"
repository="https://github.com/bmbper/bmbp_bpm"
documentation="https://github.com/bmbper/bmbp_bpm"
[workspace.dependencies]
