[package]
name = "bmbp_bpm_deploy"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
